--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
   color: white;
 }
 
-.header-content { /* styles the new div */
+.header-content { 
   background-color: #282c34;
-  width: 100%; /* makes the black background span the whole width*/
-  padding-bottom: 20px; /* add padding if needed*/
+  width: 100%; 
+  padding-bottom: 20px; 
 }
 
 .header-content h1 {
@@ -23,16 +23,17 @@ footer {
   padding: 12px;
   background-color: paleturquoise;
   color: black;
+  width: 100%
 }
 
 
 .PagesButtons {
   display: flex;
-  flex-direction: row; /* Align buttons side by side */
-  justify-content: center; /* Pushes one button to left-center, the other to right-center */
-  align-items: center; /* Centers buttons vertically */
-  width: 100%; /* Adjust width as needed */
-  margin: 0 auto; /* Centers the button container */
+  flex-direction: row; 
+  justify-content: center; 
+  align-items: center; 
+  width: 100%; 
+  margin: 0 auto;
   background-color: rgb(57, 241, 241);
   height: 30vh;
   gap:10vh
@@ -41,8 +42,7 @@ footer {
   .PagesButtons button {
     background-color: rgb(0, 49, 65);
   width: 30vh;
-  border: 1px solid black; /* Fixes border */
+  border: 1px solid black; 
   text-align: center;
-  padding: center; /* Ensures proper spacing inside the button */
-  height: 15vh; /* Fixes fit-content issue */
-}
+  padding: center; 
+  height: 15vh;}
