Added buttons to navigate from basic->detailed and detailed->basic

--- a/src/pages/BasicQuestionsPage.css
+++ b/src/pages/BasicQuestionsPage.css
@@ -5,8 +5,12 @@ display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: center;
-font-size: calc(10px + 2vmin);
+font-size: calc(20px + 2vmin);
 color: white;
+}
+
+.Header-Buttons-Basic{
+    font-size: calc(1px + 2vmin);
 }
 
 .App-link {
