--- a/src/pages/DetailedQuestionsPage.css
+++ b/src/pages/DetailedQuestionsPage.css
@@ -5,7 +5,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
+    font-size: calc(20px + 2vmin);
     color: white;
     }
-    
+
+.Header-Buttons-Detailed{
+    font-size: calc(1px + 2vmin);
+}
