--- a/src/pages/DetailedQuestionsPage.css
+++ b/src/pages/DetailedQuestionsPage.css
@@ -1,14 +1,48 @@
-.Detailed-header {
-    background-color: #282c34;
-    min-height: 12vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(20px + 2vmin);
-    color: white;
+    .Detailed-header {
+        background-color: rgb(52, 33, 160);
+        min-height: 12vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-size: calc(20px + 2vmin);
+        color: white;
+        }
+    .Detailed-header-title{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow',sans-serif;
+        font-size: calc(30px + 2vmin);
+        
+        }
+    .Header-Buttons-Detailed-button{
+        background-color: rgb(108, 92, 195);
+        border: 1px solid black; 
+        text-align: center;
     }
-
-.Header-Buttons-Detailed{
-    font-size: calc(1px + 2vmin);
-}
+    .Detailed-Body{       
+        background-color: rgb(187, 178, 237);
+    }
+    .Header-Buttons-Detailed{
+        font-size: calc(1px + 2vmin);
+    }
+        
+    .form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .Input-Box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+            width:75%;
+            height:187px;
+    }
+    .button-row{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(187, 178, 237);
+    }
