--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -65,7 +65,7 @@ footer {
   width: 100%; 
   margin: 0 auto;
   background-color: rgb(187, 178, 237);
-  height: 1vh;
+  height: 10vh;
   gap: 10vh;
   flex-grow: 1; /* Ensures content expands inside the header */
 
@@ -134,4 +134,15 @@ footer {
   font-size: 15px;
   text-wrap: balance;
 } 
-
+.VideoButton{
+  background-color: rgb(108, 92, 195);
+  width: 10vh;
+  border: 1px solid black; 
+  text-align: center;
+  height: 5vh;
+  font-size: 8px;
+  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
