--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -43,6 +43,13 @@ footer {
   width: 100%;
 }
 
+.LoginCreateButton button{
+  background-color: rgb(108, 92, 195);
+  border: 1px solid black; 
+  text-align: center;
+  display: inline-block;
+}
+
 .PagesButtons {
   display: flex;
   flex-direction: row; 
