--- a/src/pages/DetailedResultsPage.css
+++ b/src/pages/DetailedResultsPage.css
@@ -6,7 +6,7 @@ html, body, #root {
     font-family: Arial, Helvetica, sans-serif;
   }
   .Results {
-    list-style-type: none;
+  
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -19,7 +19,6 @@ html, body, #root {
   }
   .results-list {
     background-color: rgb(187, 178, 237);
-    list-style-type: none;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -29,9 +28,11 @@ html, body, #root {
     color: rgb(0, 0, 0);
     flex-grow: 1; /* Allows it to expand and fill space */
     width: 100%;
+
   }
-  .final-suggestion{
-  
+  .final-sentence{
+    margin: 0;
+
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -39,6 +40,21 @@ html, body, #root {
     background-color:rgb(187, 178, 237);
     justify-content: flex-start; /* Aligns items to the top */
     font-size: calc(10px + 2vmin);
+    color: rgb(0, 0, 0);
+    flex-grow: 1; /* Allows it to expand and fill space */
+    width: 100%;
+    border-top: 0;
+  }
+  .final-results{
+    margin: 0;
+    
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:rgb(187, 178, 237);
+    justify-content: flex-start; /* Aligns items to the top */
+    font-size: calc(14px);
     color: rgb(0, 0, 0);
     flex-grow: 1; /* Allows it to expand and fill space */
     width: 100%;
