--- a/src/pages/components/DetailedOpenAiChatGPT.css
+++ b/src/pages/components/DetailedOpenAiChatGPT.css
@@ -34,6 +34,18 @@
     padding-top: 10px;
   }
   
+  .final-career{
+    margin-top: 20px;
+    color: #2d2d2d;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border-top: 2px solid #007bff;
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
   
   .ai-button {
     background-color: #28a745;
