--- a/src/pages/DetailedResultsPage.css
+++ b/src/pages/DetailedResultsPage.css
@@ -16,19 +16,30 @@ html, body, #root {
     color: rgb(255, 255, 255);
     flex-grow: 1; /* Allows it to expand and fill space */
     width: 100%;
-  }
-  .results-list {
     background-color: rgb(187, 178, 237);
+  }
+
+.results-container{
+  margin: 20px;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+  .results-list {
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; /* Aligns items to the top */
-    font-size: 10px;
+    font-size: 14px;
     color: rgb(0, 0, 0);
-    flex-grow: 1; /* Allows it to expand and fill space */
+    /* flex-grow: 1; Allows it to expand and fill space */
     width: 100%;
-
+    background-color: #f9f9f9;
+    
   }
   .final-sentence{
     margin: 0;
@@ -37,7 +48,6 @@ html, body, #root {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:rgb(187, 178, 237);
     justify-content: flex-start; /* Aligns items to the top */
     font-size: calc(10px + 2vmin);
     color: rgb(0, 0, 0);
@@ -52,7 +62,6 @@ html, body, #root {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:rgb(187, 178, 237);
     justify-content: flex-start; /* Aligns items to the top */
     font-size: calc(14px);
     color: rgb(0, 0, 0);
@@ -79,4 +88,9 @@ html, body, #root {
     background-color: rgb(108, 92, 195);
     border: 1px solid black; 
     text-align: center;
+}
+
+.ai-disclaimer{
+  background-color: yellow;
+  color: red
 }
