--- a/src/pages/BasicResultsPage.css
+++ b/src/pages/BasicResultsPage.css
@@ -59,6 +59,10 @@ html, body, #root {
     font-size: 2em;
   }
 
+  .date {
+    color: black
+  }
+
   .Button{
     background-color: rgb(108, 92, 195);
     border: 1px solid black; 
