--- a/src/pages/PreviousResultsPage.css
+++ b/src/pages/PreviousResultsPage.css
@@ -7,7 +7,7 @@ html, body, #root {
   }
   
   .Previous {
-  
+    background-color: rgb(187, 178, 237);
     text-align: center;
     display: flex;
     flex-direction: column;
