--- a/src/pages/CurrentResultPage.css
+++ b/src/pages/CurrentResultPage.css
@@ -69,6 +69,10 @@ html, body, #root {
     width: 100%;
   }
   
+  .date {
+    color: black
+  }
+  
   .header-content { 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow',sans-serif;
     display: flex;
@@ -83,6 +87,7 @@ html, body, #root {
   .header-content h1 {
     font-size: 2em;
   }
+  
 
   .Button{
     background-color: rgb(108, 92, 195);
