--- a/src/pages/CurrentResultPage.css
+++ b/src/pages/CurrentResultPage.css
@@ -6,6 +6,10 @@ html, body, #root {
     font-family: Arial, Helvetica, sans-serif;
   }
   .Results {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(187, 178, 237);
   }
 
