Reset Password Function Works

--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -62,6 +62,10 @@
         font-size: calc(10px + 2vmin)
     }
 
+    .passwordButton {
+      padding-top: 10px;
+    }
+
     .accFailText {
       color: red
     }
