--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,8 +4,14 @@ html, body, #root {
   display: flex;
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
+  
 }
-
+body {
+  background-image: url("../../public/xp.png"); 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .App-header {
 
   text-align: center;
@@ -19,15 +25,21 @@ html, body, #root {
   width: 100%;
 }
 
-.header-content { 
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow',sans-serif;
+.header-content {
+  font-family: Tahoma, 'Segoe UI', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  background-color: rgb(52, 33, 160);
-  width: 100%; 
-  padding-bottom: 20px; 
+  justify-content: center;
+
+  background: linear-gradient(to right, #1d5fb3, #4f94ef); /* XP blue gradient */
+  color: white;
+  width: 100%;
+  padding: 10px 0;
+  border-bottom: 1px solid #0c2c6b; /* XP edge line */
+  box-shadow: inset 0 -1px 0 #0a3d91;
+
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
 }
 
 .header-content h1 {
@@ -37,7 +49,7 @@ html, body, #root {
 footer {
   text-align: center;
   padding: 12px;
-  background-color: rgb(187, 178, 237);
+  /*background-color: rgb(187, 178, 237);*/
   color: black;
   bottom: 0;
   width: 100%;
@@ -57,7 +69,7 @@ footer {
   align-items: center; 
   width: 100%; 
   margin: 0 auto;
-  background-color: rgb(187, 178, 237);
+  /*background-color: rgb(187, 178, 237);*/
   height: 30vh;
   gap: 10vh;
   flex-grow: 1; /* Ensures content expands inside the header */
@@ -71,7 +83,7 @@ footer {
   align-items: center; 
   width: 100%; 
   margin: 0 auto;
-  background-color: rgb(187, 178, 237);
+  /*background-color: rgb(187, 178, 237);*/
   height: 10vh;
   gap: 10vh;
   flex-grow: 1; /* Ensures content expands inside the header */
@@ -104,7 +116,7 @@ footer {
   max-width: 400px;
   margin: 20px auto;
   padding: 20px;
-  background: rgb(143, 130, 217);
+  /*background: rgb(143, 130, 217);*/
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
