--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -62,18 +62,45 @@ footer {
   display: inline-block;
 }
 
-.PagesButtons {
+.PagesButtonsContainter {
   display: flex;
   flex-direction: row; 
   justify-content: center; 
   align-items: center; 
-  width: 100%; 
+  width: 80%; 
   margin: 0 auto;
   /*background-color: rgb(187, 178, 237);*/
   height: 30vh;
   gap: 10vh;
   flex-grow: 1; /* Ensures content expands inside the header */
+}
 
+
+.PagesButtons {
+  background-color: #ffffff; /* XP-style white panel */
+  border: 2px solid #0a3d91;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); /* Slight shadow for depth */
+  padding: 5px;
+  font-family: Tahoma, sans-serif;
+  width: 100%;
+  max-width: 800px;
+  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+.PagesButtonsTitle {
+  background-color: #0a3d91; /* XP blue title bar */
+  color: white;
+  padding: 8px 15px;
+  font-family: Tahoma, sans-serif;
+  font-weight: bold;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  text-align: center;
+  font-size: 16px;
 }
 
 .LoggedButtons {
@@ -93,11 +120,12 @@ footer {
 .ButtonDescription {
   width: 75vh;
   color: rgba(37, 37, 37, 0.829);
-  border: 1px solid rgb(122, 115, 110);
-  background-color: rgb(187, 178, 237);
+  /*border: 1px solid rgb(122, 115, 110);*/
+  background-color: #ffffff;
   margin-top: 5px;
   font-size: 18px;
   text-wrap: balance;
+  font-family: Tahoma, Geneva, sans-serif;
 }
 
 .Submit-Button {
@@ -131,11 +159,15 @@ footer {
 }
 
 .PagesButtons button {
-  background-color: rgb(108, 92, 195);
-  width: 30vh;
-  border: 1px solid black; 
-  text-align: center;
-  height: 10vh;
+  background-color: #e1e1e1;
+  border: 1px solid #7f7f7f;
+  font-family: Tahoma, sans-serif;
+  padding: 6px 12px;
+  font-size: 14px;
+  margin: 5px;
+  color: black;
+  box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
+  cursor: pointer;
 }
 
 .LoggedButtons button {
