added the backgrouund to a couple of the places like login page and basic question page but not finished yet

--- a/src/pages/DetailedQuestionsPage.css
+++ b/src/pages/DetailedQuestionsPage.css
@@ -17,6 +17,7 @@
         background-color: rgb(108, 92, 195);
         border: 1px solid black; 
         text-align: center;
+        flex: row;
     }
     .Detailed-Body{       
         background-color: rgb(187, 178, 237);
