--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -1,71 +1,88 @@
-
 .Login {
-  
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start; /* Aligns items to the top */
-    font-size: calc(10px + 2vmin);
-    color: white;
-    flex-grow: 1; /* Allows it to expand and fill space */
-    width: 100%;
-    background-color: rgb(187, 178, 237);
-  }
-  
-  .header-content { 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow',sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: rgb(52, 33, 160);
-    width: 100%; 
-    padding-bottom: 20px; 
-  }
-  
-  .header-content h1 {
-    font-size: 2em;
-  }
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /* Aligns items to the top */
+  font-size: calc(10px + 2vmin);
+  color: white;
+  flex-grow: 1; /* Allows it to expand and fill space */
+  width: 100%;
+  background-image: url("../../public/xp.png"); 
 
-  .Button{
-    background-color: rgb(108, 92, 195);
-    border: 1px solid black; 
-    text-align: center;
 }
 
-    .LoginButton {
-        background-color: rgb(108, 92, 195);
-        border: 1px solid black; 
-        text-align: center;
-        width: 100px;
-        display: inline-block;
-    }
+.header-content { 
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: rgb(52, 33, 160);
+  width: 100%; 
+  padding-bottom: 20px; 
+}
 
-    .accountButtons {
-        display: flex;
-        padding-top: 1vh;
-    }
+.header-content h1 {
+  font-size: 2em;
+}
 
-    .accountInfo {
-        width: 75vh;
-        color: black;
-        background-color: rgb(187, 178, 237);
-        margin-top: 5px;
-        font-size: 18px;
-        text-wrap: balance;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        padding-bottom: 20px; 
-        font-size: calc(10px + 2vmin)
-    }
+/* Unified button style for Login and Create Account */
+.Button {
+  background-color: rgb(163, 160, 180);
+  border: 1px solid black; 
+  text-align: center;
+  color: white;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  padding: 10px 20px;
+  min-width: 100px;
+  display: inline-block;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  margin: 0 8px;
+}
 
-    .passwordButton {
-      padding-top: 10px;
-    }
+.Button:hover {
+  background-color: rgb(80, 70, 140);
+}
 
-    .accFailText {
-      color: red
-    }
+/* If you want to keep LoginButton for layout, don't override color/font/size */
+.LoginButton {
+  width: 100px;
+  display: inline-block;
+}
+
+/* Container for both buttons */
+.accountButtons {
+  display: flex;
+  gap: 10px;
+  padding-top: 1vh;
+  justify-content: center;
+}
+
+/* Account info box */
+.accountInfo {
+  width: 75vh;
+  color: black;
+  background-color: none;
+  margin-top: 5px;
+  font-size: 18px;
+  text-wrap: balance;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-bottom: 20px; 
+  font-size: calc(10px + 2vmin);
+}
+
+/* Password button wrapper */
+.passwordButton {
+  padding-top: 10px;
+}
+
+/* Error text */
+.accFailText {
+  color: red;
+}
