--- a/src/pages/components/BasicOpenAiChatGPT.css
+++ b/src/pages/components/BasicOpenAiChatGPT.css
@@ -2,7 +2,7 @@
     margin: 20px;
     padding: 10px;
     font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+    background-color: none;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   }
@@ -16,7 +16,8 @@
     margin-top: 10px;
     
   }
-  
+ 
+
   .final-result {
     margin-top: 20px;
     color: #2d2d2d;
@@ -27,15 +28,15 @@
   }
   
   
-  
   .ai-button {
-    background-color: #28a745;
-    color: white;
+    background-color: #15782a;
+    color: rgb(236, 236, 236);
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 1rem;
     cursor: pointer;
+    flex-wrap: wrap;
   }
   
   
