--- a/src/pages/MyProfilePage.css
+++ b/src/pages/MyProfilePage.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background-color: rgb(52, 33, 160);
+  background-color: rgb(239, 239, 239);
   width: 100%; 
   padding-bottom: 20px; 
 }
@@ -24,28 +24,48 @@
 .header-content h1 {
   font-size: 2em;
 }
-
 .Button {
-  background-color: rgb(108, 92, 195);
-  border: 1px solid black; 
+  background-color: #e0e0e0; /* Classic XP button gray */
+  border: 2px outset #ffffff; /* XP-style 3D border */
+  color: black;
+  font-family: Tahoma, sans-serif;
+  padding: 8px 16px;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  min-width: 100px;
+  box-shadow: inset -1px -1px #a0a0a0, inset 1px 1px #ffffff;
   text-align: center;
 }
 
+.Button:hover {
+  background-color: #dcdcdc;
+}
+
+.Button:active {
+  border: 2px inset #ffffff;
+  background-color: #d0d0d0;
+}
+
 .passwordBoxes {
-  border-style: outset;
-  width: fit-content;
-  min-width: 25%;
+  background-color: #ffffff; /* White background for the box */
+  border: 2px solid #0a3d91; /* XP blue border */
+  border-radius: 5px;
+  padding: 15px;
+  margin: 10px auto;
+  font-family: Tahoma, sans-serif;
   color: black;
-  margin: auto;
-  font-size: 18px;
+  font-size: 1rem;
   text-wrap: balance;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start; /* Align items to the start (top left) */
   justify-content: flex-start;
-  padding-bottom: 20px; 
-  font-size: calc(10px + 2vmin)
+  width: fit-content;
+  min-width: 25%;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
+
 
 .resetFailMessage {
   color: red;
