--- a/src/pages/CurrentResultPage.css
+++ b/src/pages/CurrentResultPage.css
@@ -84,8 +84,10 @@ html, body, #root {
   
 
   .Button{
-    background-color: rgb(108, 92, 195);
-    border: 1px solid black; 
+    background-color: #e1e1e1;
+    border: 1px solid #7f7f7f;
+    box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
+    color: black;
     text-align: center;
 }
 
