--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -56,8 +56,15 @@ footer {
 }
 
 .LoginCreateButton button{
-  background-color: rgb(108, 92, 195);
-  border: 1px solid black; 
+  background-color: #e1e1e1;
+  border: 1px solid #7f7f7f;
+    font-family: Tahoma, sans-serif;
+    padding: 6px 12px;
+    font-size: 14px;
+    margin: 5px;
+    color: black;
+    box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
+    cursor: pointer;
   text-align: center;
   display: inline-block;
 }
@@ -107,6 +114,7 @@ footer {
   background: linear-gradient(to top, #1d5fb3, #4f94ef); /* XP blue gradient */
   width: 100%;
   padding: 0;
+  border-radius: 2px;
 
 }
 
@@ -150,16 +158,19 @@ footer {
   width: 100%;
   max-width: 400px;
   margin: 20px auto;
-  padding: 20px;
-  /*background: rgb(143, 130, 217);*/
-  border-radius: 10px;
+  padding: 0px;
+  border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff; /* XP-style white panel */
+  border: 2px solid #0a3d91;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); /* Slight shadow for depth */
+  font-family: Tahoma, sans-serif;
 }
 .API input {
   width: 50%;
   padding: 10px;
   border: 1px solid #000000;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 16px;
   transition: 0.3s;
   text-align: center;
@@ -178,9 +189,13 @@ footer {
 }
 
 .LoggedButtons button {
-  background-color: rgb(108, 92, 195);
+  background-color: #e1e1e1;
+  border: 1px solid #7f7f7f;
+  box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
+  color: black;
+
   width: 30vh;
-  border: 1px solid black; 
+  
   text-align: center;
   height: 10vh;
 }
@@ -213,4 +228,15 @@ footer {
   position: absolute;
   top: 0;
   right: 0;
+}
+.Submit-Button{
+background-color: #e1e1e1;
+    border: 1px solid #7f7f7f;
+    font-family: Tahoma, sans-serif;
+    padding: 6px 12px;
+    font-size: 14px;
+    margin: 5px;
+    color: black;
+    box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
+    cursor: pointer;
 }
