--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -29,9 +29,14 @@
   }
 
   .Button{
-    background-color: rgb(108, 92, 195);
-    border: 1px solid black; 
-    text-align: center;
+    background-color: #e1e1e1;
+    border: 1px solid #7f7f7f;
+    box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
+    color: black;
+    text-align: center;   
+}
+.header-buttons-basic{
+  flex: auto;
 }
 
     .LoginButton {
